--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-markdown-editor": "^5.10.0",
     "axios": "^0.27.2",
+    "markdown-it": "^13.0.1",
+    "markdown-to-jsx": "^7.1.7",
     "react": "^18.2.0",
     "react-animated-slider": "^1.1.4",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-markdown": "^8.0.3",
+    "react-markdown-editor-lite": "^1.3.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
